# ubichill

./: .dockerignore  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  Dockerfile  Dockerfile.ci  Dockerfile.ci.dockerignore  QUICKJS_SANDBOX_PROPOSAL.md  README.md  SDK_IMPROVEMENTS.md  SECURITY.md  biome.json  dev.sh  docker-compose.yml  index.yaml  nginx.conf.template  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  start-plugins.sh  start-with-plugins.sh  turbo.json  vitest.config.ts
.claude/: settings.local.json
.devcontainer/: devcontainer.json  docker-compose.yml  setup.sh
.github/: dependabot.yml  pull_request_template.md
charts/: README.md
docs/: API.md  ARCHITECTURE.md  CAPABILITIES.md  DB_SCHEMA.md  GITOPS_MIGRATION.md  MOD.md  PLATFORM_SPEC.md  PLUGIN_ARCHITECTURE.md  PLUGIN_DEVELOPMENT.md  ROADMAP.md  SDK_MIGRATION.md  SDK_REFERENCE.md  Troubleshooting.md  UBICRATE_PLAN.md  UEP.md  WORLD_AS_CODE.md  world-format.md
k8s/: README.md  configmap.yaml  deployment.yaml  ingress.yaml  video-player-deployment.yaml
mods/: index.json
mods/video-player/backend/: .dockerignore  Dockerfile  pyproject.toml
plugins/: index.json
plugins/video-player/backend/: Dockerfile  Dockerfile.prod  k8s_scaling.py  main.py  main_with_cache.py  pyproject.toml  requirements.txt  scaling_api.py
rooms/: default.yaml  workspace.yaml
scripts/: build-workers.mjs  build-workers.test.mjs  dev.mjs  gen-capability-docs.mjs  start-mods.mjs  start-plugins.mjs  touch.mjs  watch-workers.mjs
worlds/: default.yaml  workspace.yaml  worlds.json
(+309 files in other folders)
