[project]
name = "yt-resolver"
version = "0.1.0"
description = "YouTube Resolver Microservice"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "yt-dlp>=2024.12.0",
    "python-multipart>=0.0.20",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
